# Design-Implementation-of-A-Generalized-Solution-on-Diabetic-Retinopathy-on-an-Edge-Device

./: README.md
anatomical_features/anatomical_features/: bv-final.ipynb
pathological_feature_extraction/pathological_features/: CROPPING_&_AUTOFIT_MYP.ipynb  detection.py  functional.py  hf_hub.py  segmentation.py
pathological_features/: config.py  constants.py  pyproject.toml  visualization.py
