[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Lesions_Segmentation_and_Counting"
version = "0.1.1"
description = "Tools for lesions segmentation & counting in retinal fundus images"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "opencv-python-headless",
    "torchseg",
    "pandas",
    "torch",
    "torchvision",
    "matplotlib",
    "huggingface_hub",
    "kornia",
    "PIL",
    "albumentations","scikit-learn",
    "scipy",
     "timm",
    "icecream",
]

[project.urls]
"Homepage" = "https://github.com/Arfa234/Lesions_Segmentation_and_Counting"


[tool.hatch.metadata]
allow-direct-references = true